# aipva-waa

./: .gitignore  README.md  pyproject.toml
src/: audio.py  keyboardtest.py  llm.py  main.py
