[tool.poetry]
name = "aipva-waa"
version = "0.1.0"
description = "AI-powered voice assistant ... with an attitude!"
authors = ["Hannes Rohde <h.rohde@qvest-digital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-speech = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
